[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/C#/AXA.cs

    
    //지정한 입력 모듈에 트리거 모드를 설정한다.
    //==================================================================================================//
    // uTriggerMode : NORMAL_MODE(1)   --> 사용자가 원하는 시점에 A/D변환하는 Software Trigger 방식 
    //              : TIMER_MODE(2)    --> H/W의 내부 클럭을 이용해서 A/D변환하는 Trigger 방식
    //              : EXTERNAL_MODE(3) --> 외부 입력단자의 클럭을 이용해서 A/D변환하는 Trigger 방식
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiSetTriggerMode(int lModuleNo, uint uTriggerMode);
    
    //지정한 모듈에 트리거 모드를 확인한다.
    //==================================================================================================//
    // *upTriggerMode : NORMAL_MODE(1)   --> 사용자가 원하는 시점에 A/D변환하는 Software Trigger 방식 
    //                : TIMER_MODE(2)    --> H/W의 내부 클럭을 이용해서 A/D변환하는 Trigger 방식
    //                : EXTERNAL_MODE(3) --> 외부 입력단자의 클럭을 이용해서 A/D변환하는 Trigger 방식
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiGetTriggerMode(int lModuleNo, ref uint upTriggerMode);
    
    //지정한 입력모듈의 Offset을 mVolt 단위(mV)로 설정한다. 최대 -100~100mVolt
    //==================================================================================================//
    // dMiliVolt    : -100 ~ 100 
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiSetModuleOffsetValue(int lModuleNo, double dMiliVolt);
    
    //지정한 입력모듈의 Offset 값을 확인한다. mVolt 단위(mV)
    //==================================================================================================//
    // *dpMiliVolt  : -100 ~ 100 
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiGetModuleOffsetValue(int lModuleNo, ref double dpMiliVolt); 

    //========== 입력 모듈 A/D 변환 함수
    //==Software Trigger Mode 함수
    //사용자가 지정한 입력 채널에 아날로그 입력 값을 A/D변환한 후 전압 값으로 반환한다.이 함수를 사용하기 전에 AxaSetTriggerModeAdc 함수를 사용하여 Normal Trigger Mode로 설정되어 있어야 한다.
    [DllImport("AXL.dll")] public static extern uint AxaiSwReadVoltage(int lChannelNo, ref double dpVolt);
    
    //지정한 입력 채널에 아날로그 입력 값을 Digit 값으로 반환한다. Normal Trigger Mode로 설정되어 있어야 한다.
    [DllImport("AXL.dll")] public static extern uint AxaiSwReadDigit(int lChannelNo, ref uint upDigit);
    
    //지정한 여러 입력 채널에 아날로그 입력 값을 전압 값으로 반환한다. Normal Trigger Mode로 설정되어 있어야 한다.
    [DllImport("AXL.dll")] public static extern uint AxaiSwReadMultiVoltage(int lSize, int[] lpChannelNo, double[] dpVolt);
    
    //지정한 여러 입력 채널에 아날로그 입력 값을 Digit 값으로 반환한다. Normal Trigger Mode로 설정되어 있어야 한다.
    [DllImport("AXL.dll")] public static extern uint AxaiSwReadMultiDigit(int lSize, int[] lpChannelNo, uint[] upDigit);
    
    //지정한 여러 입력 채널에 Immediate모드를 사용하기 위해 설정 값을 설정한다. 이 함수를 사용하기 전에 AxaSetTriggerModeAdc 함수를 사용하여 Timer Trigger Mode로 설정되어 있어야 한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetMultiAccess(int lSize, int[] lpChannelNo, int[] lpWordSize);
    
    //지정한 개수만큼 A/D변환 후 전압 값을 반환한다. 이 함수를 사용하기 전에 AxaiHwSetMultiAccess함수를 이용 설정값을 지정해야 하며 , AxaSetTriggerModeAdc 함수를 사용하여 Timer Trigger Mode로 설정되어 있어야 한다.
    // [DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiAccess(ref double[] dpBuffer);
    [DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiAccess(double[,] dpBuffer);
    
    //지정한 모듈에 샘플링 간격을 주파수 단위로 설정한다.
    //==================================================================================================//
    // dSampleFreq    : 10 ~ 100000 
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetSampleFreq(int lModuleNo, double dSampleFreq);
    
    //지정한 모듈에 샘플링 간격을 주파수 단위로 설정된 값을 확인한다.
    //==================================================================================================//
    // *dpSampleFreq  : 10 ~ 100000 
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwGetSampleFreq(int lModuleNo, ref double dpSampleFreq);
    
    //지정한 모듈에 샘플링 간격을 시간 단위(uSec)로 설정한다.
    //==================================================================================================//
    // dSamplePeriod  : 100000 ~ 1000000000
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetSamplePeriod(int lModuleNo, double dSamplePeriod);
    
    //지정한 모듈에 샘플링 간격을 시간 단위(uSec)로 설정된 값을 확인한다.
    //==================================================================================================//
    // *dpSamplePeriod: 100000 ~ 1000000000
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwGetSamplePeriod(int lModuleNo, ref double dpSamplePeriod);
    
    //지정한 입력 채널에 버퍼가 Full로 찼을 때 관리 방식을 설정한다.
    //==================================================================================================//
    // uFullMode      : NEW_DATA_KEEP(0) --> 새로운 데이터 유지
    //                : CURR_DATA_KEEP(1) --> 이전 데이터 유지
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetBufferOverflowMode(int lChannelNo, uint uFullMode);
    
    //지정한 입력 채널이 버퍼가 Full로 찼을 때 관리 방식을 확인한다.
    //==================================================================================================//
    // *upFullMode    : NEW_DATA_KEEP(0) --> 새로운 데이터 유지
    //                : CURR_DATA_KEEP(1) --> 이전 데이터 유지
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwGetBufferOverflowMode(int lChannelNo, ref uint upFullMode);
    
    //지정한 여러 입력 채널에 버퍼가 Full로 찼을 때 관리 방식을 설정한다.
    //==================================================================================================//
    // uFullMode      : NEW_DATA_KEEP(0) --> 새로운 데이터 유지
    //                : CURR_DATA_KEEP(1) --> 이전 데이터 유지
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetMultiBufferOverflowMode(int lSize, int[] lpChannelNo, uint uFullMode);
    
    //지정한 입력 채널에 버퍼의 상한 값과 하한 값을 설정한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetLimit(int lChannelNo, int lLowLimit, int lUpLimit);
    
    //지정한 입력 채널에 버퍼의 상한 값과 하한 값을 확인한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwGetLimit(int lChannelNo, ref int lpLowLimit, ref int lpUpLimit);
    
    //지정한 여러 입력 채널에 버퍼의 상한 값과 하한 값을 설정한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwSetMultiLimit(int lSize, int[] lpChannelNo, int lLowLimit, int lUpLimit);
    
    //지정한 여러 입력 채널에 H/W타이머를 이용한 A/D변환을 시작한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiChannel(int lSize, int[] lpChannelNo, int lBuffSize);
    
    //지정한 여러 입력 채널에 A/D변환을 시작 후 지정한 개수만큼 필터 처리해서 전압으로 반환한다.
    //==================================================================================================//
    // lSize          : 사용할 입력 채널의 개수
    // *lpChannelNo   : 사용할 채널 번호의 배열
    // lFilterCount   : Filtering할 데이터의 개수
    // lBuffSize      : 각 채널에 할당되는 버퍼의 개수
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwStartMultiFilter(int lSize, int[] lpChannelNo, int lFilterCount, int lBuffSize);
    
    //H/W타이머를 이용한 연속 신호 A/D변환을 중지한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwStopMultiChannel(int lModuleNo);
    
    //지정한 입력 채널의 메모리 버퍼에 데이터가 몇 개인지 검사한다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwReadDataLength(int lChannelNo, ref int lpDataLength);
    
    //지정한 입력 채널에 H/W타이머를 이용하여 A/D변환된 값을 전압 값으로 읽는다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwReadSampleVoltage(int lChannelNo, ref int lpSize, ref double dpVolt);
    
    //지정한 입력 채널에 H/W타이머를 이용하여 A/D변환된 값을 Digit 값으로 읽는다.
    [DllImport("AXL.dll")] public static extern uint AxaiHwReadSampleDigit(int lChannelNo, ref int lpSize, ref uint upDigit);

//========== 입력 모듈 버퍼 상태 체크 함수 ===============================================================================
    //지정한 입력 채널의 메모리 버퍼에 데이터가 없는 지 검사한다.
    //==================================================================================================//
    // *upEmpty       : FALSE(0) --> 메모리 버퍼에 데이터가 있을 경우
    //                : TRUE(1)  --> 메모리 버퍼에 데이터가 없을 경우
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwIsBufferEmpty(int lChannelNo, ref uint upEmpty);
    
    //지정한 입력 채널의 메모리 버퍼에 설정되어 있는 상한 값보다 데이터가 많은 지 검사한다
    //==================================================================================================//
    // *upUpper       : FALSE(0) --> 메모리 버퍼에 데이터가 상한 값보다 적을 경우
    //                : TRUE(1)  --> 메모리 버퍼에 데이터가 상한 값보다 많을 경우
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwIsBufferUpper(int lChannelNo, ref uint upUpper);
    
    //지정한 입력 채널의 메모리 버퍼에 설정되어 있는 하한 값보다 데이터가 적은 지 검사한다.
    //==================================================================================================//
    // *upLower       : FALSE(0) --> 메모리 버퍼에 데이터가 하한 값보다 많을 경우
    //                : TRUE(1)  --> 메모리 버퍼에 데이터가 하한 값보다 적을 경우
    //==================================================================================================//
    [DllImport("AXL.dll")] public static extern uint AxaiHwIsBufferLower(int lChannelNo, ref uint upLower);

//==External Trigger Mode 함수
    //지정한 입력모듈의 선택된 채널들의 외부 트리거 모드를 시작한다.
    //==================================================================================================//
    // lSize          : 지정한 입력 모듈에서 외부트리거를 사용 할 채널갯수
    // *lpChannelPos  : 지정한 입력 모듈에서 외부트리거를 사용 할 채널의 Index
    [DllImport("AXL.dll")] public static extern uint AxaiExternalStartADC(int lModuleNo, int lSize, ref int lpChannelPos);

    //지정한 입력모듈의 외부트리거 모드를 정지한다.  
    [DllImport("AXL.dll")] public static extern uint AxaiExternalStopADC(int lModuleNo);

    //지정한 입력모듈의 Fifo상태를 반환한다.
    //==================================================================================================//
    // *dwpStatus     : FIFO_DATA_EXIST(0)
    //                : FIFO_DATA_EMPTY(1)
    //                : FIFO_DATA_HALF(2)
    //                : FIFO_DATA_FULL(6)
    //==================================================================================================//    
    [DllImport("AXL.dll")] public static extern uint AxaiExternalReadFifoStatus(int lModuleNo, ref uint upStatus);
